After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680878 - marshal: Fix a lot of format string warnings on 32 bit
marshal: Fix a lot of format string warnings on 32 bit
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-31 02:32 UTC by Colin Walters
Modified: 2012-07-31 08:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
marshal: Fix a lot of format string warnings on 32 bit (3.19 KB, patch)
2012-07-31 02:32 UTC, Colin Walters
none Details | Review

Description Colin Walters 2012-07-31 02:32:17 UTC
G_GUINT64_FORMAT and friends handle "%lld" portably.
Comment 1 Colin Walters 2012-07-31 02:32:19 UTC
Created attachment 219949 [details] [review]
marshal: Fix a lot of format string warnings on 32 bit
Comment 2 Martin Pitt 2012-07-31 06:55:07 UTC
Thanks for this! Indeed I should get better at checking 32 bit builds, too. The better thing would probably be to make these warnings fatal, so that 32 bit builds would yell at me immediately?
Comment 3 Martin Pitt 2012-07-31 08:55:16 UTC
(In reply to comment #2)
> The better thing would probably be to make these warnings fatal, so that 32 bit
> builds would yell at me immediately?

Done in git master now, for the record.