marshal: Fix a lot of format string warnings on 32 bit

G_GUINT64_FORMAT and friends handle "%lld" portably.

https://bugzilla.gnome.org/show_bug.cgi?id=680878